Set default language to English and      improve translation application

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -12,5 +12,6 @@
   "email_placeholder": "Enter your email",
   "read_more": "Read more",
   "comments": "Comments",
-  "related_news": "Related News"
+  "related_news": "Related News",
+  "tagline": "Your source for local and international news, personalized by country and in your language."
 }
