--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -12,5 +12,6 @@
   "email_placeholder": "Introduce tu correo electrónico",
   "read_more": "Leer más",
   "comments": "Comentarios",
-  "related_news": "Noticias Relacionadas"
+  "related_news": "Noticias Relacionadas",
+  "tagline": "Tu fuente de noticias locales e internacionales, personalizadas por país y en tu idioma."
 }
