--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -12,5 +12,6 @@
   "email_placeholder": "Entrez votre courriel",
   "read_more": "Lire la suite",
   "comments": "Commentaires",
-  "related_news": "Nouvelles Connexes"
+  "related_news": "Nouvelles Connexes",
+  "tagline": "Votre source d'informations locales et internationales, personnalisées par pays et dans votre langue."
 }
